Fix simple question overflow style

--- a/src/app/pages/player/contents/simple-question/simple-question.component.scss
+++ b/src/app/pages/player/contents/simple-question/simple-question.component.scss
@@ -32,6 +32,7 @@
     }
 
     .front, .back {
+      display: flex;
       width:100%;
       backface-visibility: hidden;
     }
@@ -39,7 +40,6 @@
     .front {
       transform: rotate3d(0, 0, 0, 0);
       z-index: 1;
-      padding-bottom: 20px;
     }
 
     .back {
